--- a/韩城市食药监局在线考试系统.md
+++ b/韩城市食药监局在线考试系统.md
@@ -1,18 +1,13 @@
-# react-router-v4-async-easy-demo
-a best and easy async load components by react-router4`s demo
-
-### 一个简单且实用的基于redux和react-router-v4的按需加载路由组件的demo。
-
-In the project directory, you can run:
-
-### `npm start`
-
-Runs the app in the development mode.<br>
-Open [http://localhost:3000](http://localhost:3000) to view it in the browser.
-
-The page will reload if you make edits.<br>
-You will also see any lint errors in the console.
-
-
-![image](https://thumbs.gfycat.com/ThisOrangeKoodoo-max-1mb.gif)
-作者：NickLiu
+# 工作职责
+一人包揽此项目，包括需求文档，技术选型，架构搭建，前后端开发，测试，最终上线的全部流程。
+# 项目背景
+此项目总价不高，业务也不是很复杂，老板为了帮别人忙，安排我花一个月时间做的。满足食药监局针对餐饮类商户的考试而开发的一款APP，包含管理后台及APP.
+# 技术选型
+服务端语言采用Java,架构采用Spring Boot快速搭建。
+数据库为Mysql
+前端： Pc管理后台采用jquery+bootstrap。  App采用ApiCloud平台开发基于Html的混合App。
+# 主要功能
+Pc管理后台：题库录入，试题制作，发布考试，分数统计。
+App：查看考试信息，进入考场答题，查看分数。
+# 项目图片预览：
+![image](https://github.com/liu343832401/projectExperience/blob/master/%E8%80%83%E8%AF%95%E7%B3%BB%E7%BB%9F/Screenshot_20170213-142239.png)
