--- a/韩城市食药监局在线考试系统.md
+++ b/韩城市食药监局在线考试系统.md
@@ -10,4 +10,4 @@
 Pc管理后台：题库录入，试题制作，发布考试，分数统计。
 App：查看考试信息，进入考场答题，查看分数。
 # 项目图片预览：
-![image](https://github.com/liu343832401/projectExperience/blob/master/%E8%80%83%E8%AF%95%E7%B3%BB%E7%BB%9F/Screenshot_20170213-142239.png)
+![image](http://chuantu.xyz/t6/736/1590389818x2073530529.png)
