--- a/韩城市食药监局在线考试系统.md
+++ b/韩城市食药监局在线考试系统.md
@@ -7,7 +7,7 @@
 数据库为Mysql
 前端： Pc管理后台采用jquery+bootstrap。  App采用ApiCloud平台开发基于Html的混合App。
 # 主要功能
-Pc管理后台：题库录入，试题制作，发布考试，分数统计。
+Pc管理后台：题库录入，试题制作，发布考试，分数统计， 考试信息推送。
 App：查看考试信息，进入考场答题，查看分数。
 # 项目图片预览：
-![image](http://chuantu.xyz/t6/736/1590389818x2073530529.png)
+<img width="800" src="http://chuantu.xyz/t6/736/1590389818x2073530529.png" />
