--- a/6度人才招聘网.md
+++ b/6度人才招聘网.md
@@ -1,18 +1,19 @@
-# react-router-v4-async-easy-demo
-a best and easy async load components by react-router4`s demo
-
-### 一个简单且实用的基于redux和react-router-v4的按需加载路由组件的demo。
-
-In the project directory, you can run:
-
-### `npm start`
-
-Runs the app in the development mode.<br>
-Open [http://localhost:3000](http://localhost:3000) to view it in the browser.
-
-The page will reload if you make edits.<br>
-You will also see any lint errors in the console.
-
-
-![image](https://thumbs.gfycat.com/ThisOrangeKoodoo-max-1mb.gif)
-作者：NickLiu
+# 项目背景
+初创公司产品之一，针对于内推招聘，悬赏招聘的人力资源服务网站。
+# 技术选型
+服务端语言采用Java体系,涉及框架：spring mvc, shiro, mybatis, ehcache, jedis
+数据库:Mysql
+分布式服务相关：zookeeper, redis, nginx, jetty
+版本控制： git
+自动化部署： jekins
+前端： Pc: jquery
+# 功能划分
+只开发了PC版本，核心模版包含：悬赏招聘，悬赏求职，发展团队，面试流程
+# 工作职责
+1. 前后端核心功能开发（首页，团队管理等），指导其他开发人员。
+2. 首页静态化处理，nginx反代及负载均衡
+# 项目图片预览：
+<img width="800" src="http://chuantu.xyz/t6/736/1590394830x1033347913.png" />
+<img width="800" src="http://chuantu.xyz/t6/736/1590394851x1033347913.png" />
+<img width="800" src="http://chuantu.xyz/t6/736/1590394866x1031866013.png" />
+<img width="800" src="http://chuantu.xyz/t6/736/1590394884x1033347913.png" />
